k8s/ingress/apache.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
  labels:
    app: apache
spec:
  containers:
  - name: apache
    image: httpd
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
